<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/register_bk_color"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".android.ui.screen.welcome.RegistrationScreenFragment">

    <Button
        android:id="@+id/cirRegisterButton"
        style="@style/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/register"
        android:textColor="#2879AE"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <GridLayout
        android:id="@+id/gridLayout"
        style="@style/parent"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/whiteTextColor"
        app:layout_constraintBottom_toTopOf="@+id/cirRegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/registerTextUserName"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_row="0"
            android:layout_column="0"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/registerTextSurName"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_row="1"
            android:layout_column="0"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/registerTextEmail"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/registerTextPassword"
            style="@style/modifiedEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="14sp" />


    </GridLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_login_lost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="85dp"
        android:layout_height="73dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/viewParent.headerText.NoMode"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/here_s_nyour_first_nstep_with_nus"
        android:textColor="@color/whiteTextColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Fragment for registering an account
        AUTHOR: Bashar Oumari-->